Changed upload path for workflows

--- a/.github/workflows/windows_runtime_test.yml
+++ b/.github/workflows/windows_runtime_test.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: binaries
-          path: *.exe
+          path: bin
 
   windows_runtime_tests:
     needs: docker_build
